project2/spl-spec/my_test/test_11912013_02.out
Error type 3 at Line 13: variable is redefined.
Error type 15 at Line 12: the structure should not be redfined.
