project2/spl-spec/my_test/test_11912013_02.spl
// check type 15 Error
struct st1 {
    int i2;
    char c1;
};
int test_11912013_02 () {
    int i1 = 0;
    int i3 = 0;
    int i4 = i1 + i3;
    return 0;
}
struct st1 {
    int i1;
    char c2;
};